stop images being too wide

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -76,6 +76,10 @@ font-size: 13px;
     margin-left: 0.5em;
 }
 
+#content img {
+    max-width: 100%;
+}
+
 h1, h2, h3, h4, h5 {
 font-family: sans-serif;
 margin: 1.2em 0 0.6em 0;
